GNOME Bugzilla – Bug 603526
Memory leak in girepository/girffi.c
Last modified: 2015-02-07 17:03:44 UTC
Created attachment 148858 [details] [review] Patch for this bug Memory leak in girepository/girffi.c
Comment on attachment 148858 [details] [review] Patch for this bug Looks good, please commit.
The following fix has been pushed: 8ebaa58 Plug a leak in g_callable_info_get_ffi_return_type
Created attachment 148895 [details] [review] Plug a leak in g_callable_info_get_ffi_return_type
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]