Plug a leak in g_callable_info_get_ffi_return_type

https://bugzilla.gnome.org/show_bug.cgi?id=603526